Fixed issue - page elements jumping when hovering over nav bar elements (bottom-border), changed col-xm to col-xs

--- a/css/style.css
+++ b/css/style.css
@@ -145,6 +145,7 @@ h2 {
     color: #fff;
     padding-top: 40px;
     font-size: 85%;
+    border-bottom: 2px solid transparent;
 }
 
 #navstyle{
@@ -153,7 +154,8 @@ h2 {
 
 
 .navbar li a:hover, .navbar li a:active  {
-    border-bottom: 2px solid #c00000;
+    border-color: #c00000;
+
 }
 
 /*----Nav Bar Collapsed---*/
